--- a/AutoLayoutExercise/Auto Layout Exercise/Base.lproj/Main.storyboard
+++ b/AutoLayoutExercise/Auto Layout Exercise/Base.lproj/Main.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,20 +15,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jd9-ye-5To">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Green Button" translatesAutoresizingMaskIntoConstraints="NO" id="jd9-ye-5To">
+                                <rect key="frame" x="151" y="392" width="112" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jd9-ye-5To" secondAttribute="height" multiplier="1:1" id="elc-yW-pdD"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nea-LT-4rE">
-                                <rect key="frame" x="87" y="248" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Blue Button" translatesAutoresizingMaskIntoConstraints="NO" id="nea-LT-4rE">
+                                <rect key="frame" x="10" y="392" width="112" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="nea-LT-4rE" secondAttribute="height" multiplier="1:1" id="ezb-zf-ito"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eCe-XH-9cK">
-                                <rect key="frame" x="87" y="520" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Purple Button" translatesAutoresizingMaskIntoConstraints="NO" id="eCe-XH-9cK">
+                                <rect key="frame" x="292" y="392" width="112" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="eCe-XH-9cK" secondAttribute="height" multiplier="1:1" id="pVC-dy-QvZ"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="eCe-XH-9cK" secondAttribute="trailing" constant="10" id="JQn-A9-stf"/>
+                            <constraint firstItem="nea-LT-4rE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="Oa9-oi-1xR"/>
+                            <constraint firstItem="nea-LT-4rE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RBT-cc-Suu"/>
+                            <constraint firstItem="eCe-XH-9cK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="SRd-9e-HyP"/>
+                            <constraint firstItem="jd9-ye-5To" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nea-LT-4rE" secondAttribute="trailing" constant="10" id="gnL-PH-9RA"/>
+                            <constraint firstItem="eCe-XH-9cK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="jd9-ye-5To" secondAttribute="trailing" constant="10" id="sxP-e0-7pZ"/>
+                            <constraint firstItem="jd9-ye-5To" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uMh-Zv-QsZ"/>
+                            <constraint firstItem="jd9-ye-5To" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zPh-cG-vFm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -37,4 +53,9 @@
             <point key="canvasLocation" x="-57" y="110"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Blue Button" width="109" height="112"/>
+        <image name="Green Button" width="109" height="112"/>
+        <image name="Purple Button" width="109" height="112"/>
+    </resources>
 </document>
