--- a/AutoLayoutExercise/Auto Layout Exercise/Base.lproj/Main.storyboard
+++ b/AutoLayoutExercise/Auto Layout Exercise/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,19 +16,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Green Button" translatesAutoresizingMaskIntoConstraints="NO" id="jd9-ye-5To">
-                                <rect key="frame" x="151" y="392" width="112" height="112"/>
+                                <rect key="frame" x="144.66666666666666" y="385.66666666666669" width="124.66666666666666" height="124.66666666666669"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="jd9-ye-5To" secondAttribute="height" multiplier="1:1" id="elc-yW-pdD"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Blue Button" translatesAutoresizingMaskIntoConstraints="NO" id="nea-LT-4rE">
-                                <rect key="frame" x="10" y="392" width="112" height="112"/>
+                                <rect key="frame" x="10.000000000000007" y="385.66666666666669" width="124.66666666666669" height="124.66666666666669"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="nea-LT-4rE" secondAttribute="height" multiplier="1:1" id="ezb-zf-ito"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Purple Button" translatesAutoresizingMaskIntoConstraints="NO" id="eCe-XH-9cK">
-                                <rect key="frame" x="292" y="392" width="112" height="112"/>
+                                <rect key="frame" x="279.33333333333331" y="385.66666666666669" width="124.66666666666669" height="124.66666666666669"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="eCe-XH-9cK" secondAttribute="height" multiplier="1:1" id="pVC-dy-QvZ"/>
                                 </constraints>
@@ -40,8 +40,10 @@
                             <constraint firstItem="nea-LT-4rE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="Oa9-oi-1xR"/>
                             <constraint firstItem="nea-LT-4rE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RBT-cc-Suu"/>
                             <constraint firstItem="eCe-XH-9cK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="SRd-9e-HyP"/>
-                            <constraint firstItem="jd9-ye-5To" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nea-LT-4rE" secondAttribute="trailing" constant="10" id="gnL-PH-9RA"/>
-                            <constraint firstItem="eCe-XH-9cK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="jd9-ye-5To" secondAttribute="trailing" constant="10" id="sxP-e0-7pZ"/>
+                            <constraint firstItem="eCe-XH-9cK" firstAttribute="width" secondItem="nea-LT-4rE" secondAttribute="width" id="c4f-hb-AML"/>
+                            <constraint firstItem="jd9-ye-5To" firstAttribute="leading" secondItem="nea-LT-4rE" secondAttribute="trailing" constant="10" id="gnL-PH-9RA"/>
+                            <constraint firstItem="jd9-ye-5To" firstAttribute="width" secondItem="nea-LT-4rE" secondAttribute="width" id="k2V-ws-8n4"/>
+                            <constraint firstItem="eCe-XH-9cK" firstAttribute="leading" secondItem="jd9-ye-5To" secondAttribute="trailing" constant="10" id="sxP-e0-7pZ"/>
                             <constraint firstItem="jd9-ye-5To" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uMh-Zv-QsZ"/>
                             <constraint firstItem="jd9-ye-5To" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zPh-cG-vFm"/>
                         </constraints>
